# FLPQViewer

./: .gitignore  LICENSE  README.md  pyproject.toml  todo.md  update_version.py
docs/source/: conf.py  index.rst
flpqv/: __init__.py  cite_bibtex.py  data_cube.py  default.toml  main_flpqv.py  parameters.py  plot_data.py  plot_figures.py  plot_isosurface_with_color.py  plot_stress_3d.py  plot_style.py  show_figures.py
flpqv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flpqv/old/: default_old.toml  plot_isosurface_with_color.py  sample.toml  test_mayavi.py  toml_GUI.py
