[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flpqv"
version = "0.1.3"
description = "FLPQ Viewer"
authors = [{ name = "Masahiro FUKUDA", email = "masahiro.fukuda@issp.u-tokyo.ac.jp" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "requests",
    "numpy>=2.0.0",
    "trimesh",
    "scipy",
    "scikit-image",
    "matplotlib",
    "watchdog",
    "sphinx",
    "notebook",
    "plotly",
    "dash"
]

[tool.setuptools.packages.find]
include = ["flpqv"]
exclude = ["samples"]
